添加公共异常，pom添加nacos

--- a/blog-api/pom.xml
+++ b/blog-api/pom.xml
@@ -21,16 +21,14 @@
         <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
     </properties>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.blog</groupId>
+            <artifactId>base-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
