--- a/user-api/pom.xml
+++ b/user-api/pom.xml
@@ -17,5 +17,13 @@
     <name>user-api</name>
     <description>Demo project for Spring Boot</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.blog</groupId>
+            <artifactId>base-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
