--- a/base-commons/pom.xml
+++ b/base-commons/pom.xml
@@ -9,21 +9,18 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>email-api</artifactId>
+    <artifactId>base-commons</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <name>base-commons</name>
     <packaging>jar</packaging>
-
-
-    <name>email-api</name>
     <description>Demo project for Spring Boot</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.blog</groupId>
-            <artifactId>base-commons</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
+    </properties>
+
+
 
 
 </project>
